--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.3.0",
+    "js-cookie": "^2.2.1",
     "luxon": "^1.25.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
