--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.3.0",
     "js-cookie": "^2.2.1",
